--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <li><a href="">Shop</a></li>
                                 <li><a href="">Gallery</a></li>
                                 <li><a href="">About</a></li>
-                                <li><a href="">News</a></li>
+                                <li><a href="">Blog</a></li>
                                 <li><a href="">Contact</a></li>
                                 <li class="hg__spacer"></li>
                                 <li>
@@ -109,13 +109,15 @@
             </header>
             <section id="hg__hero" data-parallax-container>
                 <div class="hg__layer-container-l" data-parallax data-parallax-speed="40">
-                    <a href="/the-rhapsody.html" id="hg__hero-accent-1">
+                    <a href="" id="hg__hero-accent-1">
                         <img src="./assets/imgs/img_06.jpg" alt="">
+                        <div class="swipe"></div>
                     </a>
                 </div>
                 <div class="hg__layer-container-l" data-parallax data-parallax-speed="30">
-                    <a href="/the-rhapsody.html" id="hg__hero-image">
+                    <a href="" id="hg__hero-image">
                         <img src="./assets/imgs/img_14.jpg" alt="">
+                        <div class="swipe"></div>
                     </a>
                 </div>
                 <div class="hg__layer-container-l" data-parallax data-parallax-speed="20">
@@ -124,21 +126,24 @@
                             <h1><span class="heading-accent">Contemporary & Timeless </span>The Rhapsody</h1>
                             <div>
                                 <p>The pear-shaped composition of the Rhapsody ring is, as its name suggests, "a work free in form and inspiration."</p>
-                                <a href="/the-rhapsody.html" class="btn">Explore The Rhapsody</a>
+                                <a href="" class="btn">Explore The Rhapsody</a>
                             </div>
                         </div>
-                        <a href="/the-rhapsody.html" id="hg__hero-accent-2">
+                        <a href="" id="hg__hero-accent-2">
                             <img src="./assets/imgs/img_13.jpg" alt="">
+                            <div class="swipe"></div>
                         </a>
                     </div>
                 </div>
             </section>
             <section id="hg__about">
-                <div class="hg__container">
+                <div class="">
                     <div id="hg__about-container">
                         <div id="hg__about-wrap">
                             <div id="hg__about-image">
-                                <img src="./assets/imgs/heidi-gibson.jpg" alt="">
+                                <a href="">
+                                    <img src="./assets/imgs/heidi-gibson.jpg" alt="">
+                                </a>
                             </div>
                             <div id="hg__about-text">
                                 <span class="hg__about-text">I believe in vintage-inspired, well-crafted jewelry that is both contemporary and timeless.</span>
@@ -148,16 +153,9 @@
                     </div>
                 </div>
             </section>
-            <section id="hg__image-banner">
-                <div class="hg__container">
-                    <div class="hg__image">
-                        <img src="./assets/imgs/img_15.jpg" alt="">
-                    </div>
-                </div>
-            </section>
             <section id="hg__slider-container">
                 <div class="hg__container">
-                    <h3>Every heirloom starts with a <em>story</em>...</h3>
+                    <h2><span class="heading-accent">More than just jewelry </span>An heirloom with a <em>powerful</em> story</h2>
                     <div id="hg__slider-wrap">
                         <div id="hg__slider">
                             <div class="hg__product">
@@ -214,6 +212,44 @@
                                     <path d="M123.707 8.70711C124.098 8.31658 124.098 7.68342 123.707 7.29289L117.343 0.928932C116.953 0.538408 116.319 0.538408 115.929 0.928932C115.538 1.31946 115.538 1.95262 115.929 2.34315L121.586 8L115.929 13.6569C115.538 14.0474 115.538 14.6805 115.929 15.0711C116.319 15.4616 116.953 15.4616 117.343 15.0711L123.707 8.70711ZM0 9L123 9V7L0 7L0 9Z" fill="black"></path>
                                 </svg>
                             </button>
+                        </div>
+                    </div>
+                    <a href="#" class="btn">View Collection</a>
+                </div>
+            </section>
+            <section id="hg__full-image-banner" data-parallax-bg>
+                <img src="./assets/imgs/img_12.jpg" alt="">
+                <div class="hg__container">
+                    <div class="hg__text">
+                        <h4>Thank you for creating the ring of my dreams...</h4>
+                        <p>I never knew that I could love a ring this much- I don’t think I told you how hard it was for me when we were ring shopping in stores because I was never impressed by the typical wedding ring style. When we found your designs I instantly fell in love with almost all of the designs. The fact that we were able to put all the elements that I wanted all into one ring was so exciting to me. I was surprised and very, very impressed by the beauty of the ring.</p>
+                        <p>I will love the ring forever!</p>
+                        <p class="hg__signature">— M.L.</p>
+                    </div>
+                </div>
+            </section>
+            <section id="hg__image-banner">
+                <div class="hg__container">
+                    <div class="hg__image-flex">
+                        <h3><span class="heading-accent">Behind the scenes </span>Recent blog articles & events</h3>
+                        <a href="" class="btn">Browse All Posts</a>
+                    </div>
+                    <div class="hg__row">
+                        <div class="hg__col">
+                            <a href="">
+                                <div class="hg__image-short">
+                                    <img src="./assets/imgs/img_01.jpg" alt="" id="hg__image-count-1">
+                                </div>
+                                <div class="swipe"></div>
+                            </a>
+                        </div>
+                        <div class="hg__col">
+                            <a href="">
+                                <div class="hg__image-tall">
+                                    <img src="./assets/imgs/img_08.jpg" alt="" id="hg__image-count-2">
+                                </div>
+                                <div class="swipe"></div>
+                            </a>
                         </div>
                     </div>
                 </div>
